Added i10n to changeuserrole.jsp

--- a/src/main/resources/message_en.properties
+++ b/src/main/resources/message_en.properties
@@ -60,3 +60,14 @@ message.addshipservicestosystem.existinginsystem=Existing services in the system
 message.addshipservicestosystem.servicealreadyexist=This service is already in the system
 message.addshipservicestosystem.faildtocreate=Failed to create a service, check the fields are filled in correctly
 message.addshipservicestosystem.creationok=Service successfully created
+message.changeuserrole.title=Change the role
+message.changeuserrole.userlogin=User login:
+message.changeuserrole.userlpassword=User password:
+message.changeuserrole.newuserrole=New user role:
+message.changeuserrole.selectnewrole=Please select a new role
+message.changeuserrole.changerolebtn=Change the role
+message.changeuserrole.errnouser=User with such username and password not found
+message.changeuserrole.errnorole=No such role found
+message.changeuserrole.errnotadmin=Only an administrator can change user roles
+message.changeuserrole.errfaild=Failed to change user role, check the fields are filled in correctly
+message.changeuserrole.ok=Role successfully changed
