Added i10n to createship.jsp

--- a/src/main/resources/message_en.properties
+++ b/src/main/resources/message_en.properties
@@ -1,4 +1,5 @@
 # add ship service to ship
+message.createship.errfailed=Failed to create ship, check the fields are filled in correctly
 message.addshipservicetoship.announcement=Add service to ship or create new service in system
 message.addshipservicetoship.advert=You must first select a ship
 
@@ -88,3 +89,13 @@ message.createport.city=City:
 message.createport.createbtn=Create
 message.createport.errfaild=Failed to create port, check the fields are filled in correctly
 message.createport.ok=Port successfully created
+message.createship.title=Create ship
+message.createship.createnewship=Create new ship
+message.createship.shipname=Ship name:
+message.createship.numstaff=Number of staff:
+message.createship.ticketfirstclass=Number of tickets of the first class:
+message.createship.ticketsecondclass=Number of tickets of the second class:
+message.createship.ticketfourthclass=The number of tickets of the fourth class:
+message.createship.ok=The ship was successfully created
+message.createship.ticketthirdclass=Number of tickets of the third class:
+message.createship.btn=Create ship
