Added i10n to editaccount.jsp

--- a/src/main/resources/message_en.properties
+++ b/src/main/resources/message_en.properties
@@ -99,3 +99,17 @@ message.createship.ticketfourthclass=The number of tickets of the fourth class:
 message.createship.ok=The ship was successfully created
 message.createship.ticketthirdclass=Number of tickets of the third class:
 message.createship.btn=Create ship
+message.editaccount.tel=Telephone:
+message.editaccount.email=Email:
+message.editaccount.firstname=First name:
+message.editaccount.lastname=Last name:
+message.editaccount.login=Login:
+message.editaccount.password=Password:
+message.editaccount.passworddupl=Password (duplicate):
+message.editaccount.title=Edit account
+message.editaccount.ok=Data updated successfully
+message.editaccount.btn=Edit account
+message.editaccount.eerupdate=Data not updated
+message.editaccount.errfillall=All fields are required
+message.editaccount.errorpass1and2=Passwords in field 1 and 2 do not match
+message.editaccount.uniq=Login and phone number must be unique!
