Added i10n to account pages

--- a/src/main/resources/message_en.properties
+++ b/src/main/resources/message_en.properties
@@ -113,3 +113,13 @@ message.editaccount.eerupdate=Data not updated
 message.editaccount.errfillall=All fields are required
 message.editaccount.errorpass1and2=Passwords in field 1 and 2 do not match
 message.editaccount.uniq=Login and phone number must be unique!
+message.myaccount.editaccountbtn=Edit account
+message.myaccount.title=My account
+message.myaccount.managebonus=Manage bonuses
+message.myaccount.addservicestosystem=Add ship services to system
+message.myaccount.changeuserrole=Change user role
+message.myaccount.createcruise=Create cruise
+message.myaccount.createexcursion=Create excursion
+message.myaccount.createport=Create port
+message.myaccount.createship=Create ship
+message.myaccount.addremoveservicestoship=Add/remove services to ship
