Added logic to manager role - add bonuses. Still didn't check because there is not JSP page for it

--- a/src/main/resources/message_en.properties
+++ b/src/main/resources/message_en.properties
@@ -123,3 +123,4 @@ message.myaccount.createexcursion=Create excursion
 message.myaccount.createport=Create port
 message.myaccount.createship=Create ship
 message.myaccount.addremoveservicestoship=Add/remove services to ship
+message.addbonuses.errselectcruise=You have to select cruise
