--- a/src/main/resources/message_es.properties
+++ b/src/main/resources/message_es.properties
@@ -114,3 +114,4 @@ message.myaccount.createexcursion=\u0043\u0072\u0065\u0061\u0072\u0020\u0075\u00
 message.myaccount.createport=\u0043\u0072\u0065\u0061\u0072\u0020\u0070\u0075\u0065\u0072\u0074\u006f
 message.myaccount.createship=\u0043\u0072\u0065\u0061\u0072\u0020\u006e\u0061\u0076\u0065
 message.myaccount.addremoveservicestoship=\u0041\u0067\u0072\u0065\u0067\u0061\u0072\u0020\u002f\u0020\u0065\u006c\u0069\u006d\u0069\u006e\u0061\u0072\u0020\u0073\u0065\u0072\u0076\u0069\u0063\u0069\u006f\u0073\u0020\u0065\u006e\u0020\u0062\u0061\u0072\u0063\u006f
+message.addbonuses.errselectcruise=You have to select cruise
