--- a/src/main/resources/message_ua.properties
+++ b/src/main/resources/message_ua.properties
@@ -114,3 +114,4 @@ message.myaccount.createexcursion=\u0421\u0442\u0432\u043e\u0440\u0438\u0442\u04
 message.myaccount.createport=\u0421\u0442\u0432\u043e\u0440\u0438\u0442\u0438\u0020\u043f\u043e\u0440\u0442
 message.myaccount.createship=\u0421\u0442\u0432\u043e\u0440\u0438\u0442\u0438\u0020\u043a\u043e\u0440\u0430\u0431\u0435\u043b\u044c
 message.myaccount.addremoveservicestoship=\u0414\u043e\u0434\u0430\u0442\u0438\u0020\u0432\u0438\u0434\u0430\u043b\u0435\u0442\u0438\u0020\u043f\u043e\u0441\u043b\u0443\u0433\u0438\u0020\u043d\u0430\u0020\u043a\u043e\u0440\u0430\u0431\u0435\u043b\u044c
+message.addbonuses.errselectcruise=You have to select cruise
