Added JSP page and localization for add and delete bonus to cruise

--- a/src/main/resources/message_en.properties
+++ b/src/main/resources/message_en.properties
@@ -123,4 +123,29 @@ message.myaccount.createexcursion=Create excursion
 message.myaccount.createport=Create port
 message.myaccount.createship=Create ship
 message.myaccount.addremoveservicestoship=Add/remove services to ship
-message.addbonuses.errselectcruise=You have to select cruise
+message.managebonuses.errselectcruise=You have to select cruise
+message.managebonuses.addbonuses=Add cruise bonus for selected ticket class
+message.managebonuses.added=Bonus successfully added
+message.managebonuses.allavailableserv=All services available on the ship:
+message.managebonuses.bforfirstclass=Bonuses for first class tickets:
+message.managebonuses.bforfourclass=Bonuses for fourth class tickets:
+message.managebonuses.bforsecclass=Bonuses for second class tickets:
+message.managebonuses.bforthirdclass=Bonuses for third class tickets:
+message.managebonuses.cannotsave=Failed to save the bonus, check the fields are filled in correctly
+message.managebonuses.cruiseid=Cruise id:
+message.managebonuses.deletebon=Delete bonuses
+message.managebonuses.deleted=Bonuses removed
+message.managebonuses.errdel=Failed to remove some bonuses
+message.managebonuses.errrecievelist=Failed to get the list of bonuses from the web page
+message.managebonuses.makeabonus=Make a bonus
+message.managebonuses.selectcruise=Select cruise:
+message.managebonuses.selectcruisemess=Please select cruise
+message.managebonuses.selectservice=Select service:
+message.managebonuses.selectticketclass=Select ticket class:
+message.managebonuses.shipname=Ship name:
+message.managebonuses.thereisbonus=Such a bonus is already available for tickets of the selected class. Choose another
+message.managebonuses.ticketclass=Ticket class:
+message.managebonuses.titel=Bonus management
+message.managebonuses.youneedselectcruise=You have to choose a cruise
+message.managebonuses.selectticketclass0=Select ticket class
+message.managebonuses.selectservice0=Select service
