Changed the table and DAO for the ticketExcursion in database. Added localization for "Create Cruise"

--- a/src/main/resources/message_en.properties
+++ b/src/main/resources/message_en.properties
@@ -149,3 +149,22 @@ message.managebonuses.titel=Bonus management
 message.managebonuses.youneedselectcruise=You have to choose a cruise
 message.managebonuses.selectticketclass0=Select ticket class
 message.managebonuses.selectservice0=Select service
+message.createcruise.arrival=Arrival:
+message.createcruise.createcruisebtn=Create cruise
+message.createcruise.departure=Departure:
+message.createcruise.errcreate=Failed to create a cruise, check the fields are filled in correctly
+message.createcruise.finishcruise=Cruise end:
+message.createcruise.finishport=Cruise finish port:
+message.createcruise.port=Port 
+message.createcruise.ok=Cruise successfully created
+message.createcruise.pricefirst=First class ticket price:
+message.createcruise.pricefourth=Fourth class ticket price:
+message.createcruise.pricesecond=Second class ticket price:
+message.createcruise.pricethird=Third class ticket price:
+message.createcruise.selectportplease=Please select a port
+message.createcruise.ship=Ship:
+message.createcruise.startcruise=Cruise start:
+message.createcruise.startport=Cruise start port:
+message.createcruise.title=Cruise creating
+message.createcruise.selectshipplease=Please select a ship
+message.headerregistred.startpage=Start page
