Added viewport.jsp and viewexcursion.jsp with logic and localization

--- a/src/main/resources/message_en.properties
+++ b/src/main/resources/message_en.properties
@@ -12,7 +12,6 @@ message.addshipservicetoship.advert=You must first select a ship
 
 
 message.loginerror=Incorrect login or password. Try again
-message.nullpage=Page not found. Business logic error.
 message.addshipservicetoship.advert2=Please select the ship
 message.addshipservicetoship.title=Add service to ship
 message.addshipservicetoship.advert3=Please select the service
@@ -77,7 +76,7 @@ message.createexcursion.selectorcreateport=Select the port where you want to add
 message.createexcursion.createportbtn=Create port
 message.createexcursion.ok=Tour successfully created
 message.createexcursion.selectport=Please select the port
-message.createexcursion.excursionname=Tour name: (maximum 100 characters)
+message.createexcursion.excursionname=Tour name: (maximum 256 characters)
 message.createexcursion.excursiondesc=Tour description: (maximum 1000 characters)
 message.createexcursion.price=Price:
 message.createexcursion.createexcurbtn=Create excursion
@@ -167,4 +166,14 @@ message.createcruise.startcruise=Cruise start:
 message.createcruise.startport=Cruise start port:
 message.createcruise.title=Cruise creating
 message.createcruise.selectshipplease=Please select a ship
-message.headerregistred.startpage=Start page
+message.headerregistred.startpage=Main page
+message.viewport.addbtn=Add to cart
+message.viewport.err=Could not find the selected port
+message.viewport.excursion=Excursions in 
+message.viewport.morebtn=More details
+message.viewport.price=Price:
+message.viewport.title=View port
+message.viewexcursion.detail=Excursion details
+message.viewexcursion.description=Description:
+message.viewexcursion.price=Price:
+message.viewexcursion.addtocart=Add to cart
