Selected string constants in a separate file and refactored a little

--- a/src/main/resources/message_en.properties
+++ b/src/main/resources/message_en.properties
@@ -177,3 +177,6 @@ message.viewexcursion.detail=Excursion details
 message.viewexcursion.description=Description:
 message.viewexcursion.price=Price:
 message.viewexcursion.addtocart=Add to cart
+message.viewcart.del=Delete
+message.viewcart.pay=Pay
+message.viewcart.title=My cart
