--- a/src/main/resources/message_es.properties
+++ b/src/main/resources/message_es.properties
@@ -168,4 +168,7 @@ message.viewexcursion.price=\u0050\u0072\u0065\u0063\u0069\u006f\u003a
 message.viewexcursion.addtocart=\u0041\u00f1\u0061\u0064\u0069\u0072\u0020\u0061\u006c\u0020\u0063\u0061\u0072\u0072\u0069\u0074\u006f
 message.viewexcursion.description=\u0044\u0065\u0073\u0063\u0072\u0069\u0070\u0063\u0069\u00f3\u006e\u003a
 message.viewexcursion.detail=\u0044\u0065\u0074\u0061\u006c\u006c\u0065\u0073\u0020\u0064\u0065\u0020\u006c\u0061\u0020\u0065\u0078\u0063\u0075\u0072\u0073\u0069\u00f3\u006e
+message.viewcart.del=\u0042\u006f\u0072\u0072\u0061\u0072
+message.viewcart.pay=\u0050\u0061\u0067\u0061\u0072
+message.viewcart.title=\u004d\u0069\u0020\u0063\u0061\u0072\u0072\u0069\u0074\u006f
 
