--- a/src/main/resources/message_ru.properties
+++ b/src/main/resources/message_ru.properties
@@ -20,7 +20,7 @@ message.headerunregistred.signup=\u0417\u0430\u0440\u0435\u0433\u0438\u0441\u044
 message.headerregistred.mycruises=\u041c\u043e\u0438\u0020\u043a\u0440\u0443\u0438\u0437\u044b
 message.headerregistred.mycart=\u041c\u043e\u044f\u0020\u043a\u043e\u0440\u0437\u0438\u043d\u0430
 message.headerregistred.myaccount=\u041c\u043e\u0439\u0020\u0430\u043a\u043a\u0430\u0443\u043d\u0442
-message.headerregistred.logout=\u0412\u0438\u0439\u0442\u0438
+message.headerregistred.logout=\u0412\u044b\u0439\u0442\u0438
 message.login.title=\u0412\u043e\u0439\u0442\u0438
 message.login.signin=\u041f\u043e\u0436\u0430\u043b\u0443\u0439\u0441\u0442\u0430\u0020\u0432\u043e\u0439\u0434\u0438\u0442\u0435\u0021
 message.login.login=\u041b\u043e\u0433\u0438\u043d\u003a
@@ -168,4 +168,7 @@ message.viewexcursion.price=\u0426\u0435\u043d\u0430\u003a
 message.viewexcursion.addtocart=\u0414\u043e\u0431\u0430\u0432\u0438\u0442\u044c\u0020\u0432\u0020\u043a\u043e\u0440\u0437\u0438\u043d\u0443
 message.viewexcursion.description=\u041e\u043f\u0438\u0441\u0430\u043d\u0438\u0435\u003a
 message.viewexcursion.detail=\u0414\u0435\u0442\u0430\u043b\u0438\u0020\u044d\u043a\u0441\u043a\u0443\u0440\u0441\u0438\u0438
+message.viewcart.del=\u0423\u0434\u0430\u043b\u0438\u0442\u044c
+message.viewcart.pay=\u041e\u043f\u043b\u0430\u0442\u0438\u0442\u044c
+message.viewcart.title=\u041c\u043e\u044f\u0020\u043a\u043e\u0440\u0437\u0438\u043d\u0430
 
