--- a/src/main/resources/message_ua.properties
+++ b/src/main/resources/message_ua.properties
@@ -168,4 +168,7 @@ message.viewexcursion.price=\u0426\u0456\u043d\u0430\u003a
 message.viewexcursion.addtocart=\u0414\u043e\u0434\u0430\u0442\u0438\u0020\u0443\u0020\u043a\u043e\u0448\u0438\u043a
 message.viewexcursion.description=\u041e\u043f\u0438\u0441\u003a
 message.viewexcursion.detail=\u0414\u0435\u0442\u0430\u043b\u0456\u0020\u0435\u043a\u0441\u043a\u0443\u0440\u0441\u0456\u0457
+message.viewcart.del=\u0412\u0438\u0434\u0430\u043b\u0438\u0442\u0438
+message.viewcart.pay=\u0421\u043f\u043b\u0430\u0442\u0438\u0442\u0438
+message.viewcart.title=\u041c\u0456\u0439\u0020\u043a\u043e\u0448\u0438\u043a
 
