--- a/src/main/resources/message_en.properties
+++ b/src/main/resources/message_en.properties
@@ -180,3 +180,5 @@ message.viewexcursion.addtocart=Add to cart
 message.viewcart.del=Delete
 message.viewcart.pay=Pay
 message.viewcart.title=My cart
+message.addshipservicetoship.errdelete=Failed to delete services
+message.addshipservicetoship.delok=Services removed
