--- a/src/main/resources/message_es.properties
+++ b/src/main/resources/message_es.properties
@@ -171,4 +171,6 @@ message.viewexcursion.detail=\u0044\u0065\u0074\u0061\u006c\u006c\u0065\u0073\u0
 message.viewcart.del=\u0042\u006f\u0072\u0072\u0061\u0072
 message.viewcart.pay=\u0050\u0061\u0067\u0061\u0072
 message.viewcart.title=\u004d\u0069\u0020\u0063\u0061\u0072\u0072\u0069\u0074\u006f
+message.addshipservicetoship.errdelete=\u0045\u0072\u0072\u006f\u0072\u0020\u0061\u006c\u0020\u0065\u006c\u0069\u006d\u0069\u006e\u0061\u0072\u0020\u0073\u0065\u0072\u0076\u0069\u0063\u0069\u006f\u0073\u002e
+message.addshipservicetoship.delok=\u0053\u0065\u0072\u0076\u0069\u0063\u0069\u006f\u0073\u0020\u0065\u006c\u0069\u006d\u0069\u006e\u0061\u0064\u006f\u0073
 
