--- a/src/main/resources/message_ru.properties
+++ b/src/main/resources/message_ru.properties
@@ -171,4 +171,6 @@ message.viewexcursion.detail=\u0414\u0435\u0442\u0430\u043b\u0438\u0020\u044d\u0
 message.viewcart.del=\u0423\u0434\u0430\u043b\u0438\u0442\u044c
 message.viewcart.pay=\u041e\u043f\u043b\u0430\u0442\u0438\u0442\u044c
 message.viewcart.title=\u041c\u043e\u044f\u0020\u043a\u043e\u0440\u0437\u0438\u043d\u0430
+message.addshipservicetoship.errdelete=\u041d\u0435\u0020\u0443\u0434\u0430\u043b\u043e\u0441\u044c\u0020\u0443\u0434\u0430\u043b\u0438\u0442\u044c\u0020\u0443\u0441\u043b\u0443\u0433\u0438
+message.addshipservicetoship.delok=\u0423\u0441\u043b\u0443\u0433\u0438\u0020\u0443\u0434\u0430\u043b\u0435\u043d\u044b
 
