--- a/src/main/resources/message_ua.properties
+++ b/src/main/resources/message_ua.properties
@@ -171,4 +171,6 @@ message.viewexcursion.detail=\u0414\u0435\u0442\u0430\u043b\u0456\u0020\u0435\u0
 message.viewcart.del=\u0412\u0438\u0434\u0430\u043b\u0438\u0442\u0438
 message.viewcart.pay=\u0421\u043f\u043b\u0430\u0442\u0438\u0442\u0438
 message.viewcart.title=\u041c\u0456\u0439\u0020\u043a\u043e\u0448\u0438\u043a
+message.addshipservicetoship.errdelete=\u041d\u0435\u0020\u0432\u0434\u0430\u043b\u043e\u0441\u044f\u0020\u0432\u0438\u0434\u0430\u043b\u0438\u0442\u0438\u0020\u043f\u043e\u0441\u043b\u0443\u0433\u0438
+message.addshipservicetoship.delok=\u041f\u043e\u0441\u043b\u0443\u0433\u0438\u0020\u0432\u0438\u0434\u0430\u043b\u0435\u043d\u0456
 
