Added viewmycruises.jsp and a history viewer called "my cruises"

--- a/src/main/resources/message_en.properties
+++ b/src/main/resources/message_en.properties
@@ -222,5 +222,7 @@ message.viewcruise.buy=Buy a cruise
 message.viewcruise.cruiseInfo=Cruise information
 message.startpage.title=Main page
 message.startpage.availcruises=Available cruises
+message.viewmycruises.history=My purchases
+message.viewmycruises.title=My purchases
 
 
