--- a/src/main/resources/message_es.properties
+++ b/src/main/resources/message_es.properties
@@ -213,5 +213,7 @@ message.viewcruise.buy=Compra un crucero
 message.viewcruise.cruiseInfo=Informaci\u00F3n de crucero
 message.startpage.title=Pagina principal
 message.startpage.availcruises=Cruceros disponibles
+message.viewmycruises.history=Mis compras
+message.viewmycruises.title=Mis compras
 
 
