--- a/src/main/resources/message_ru.properties
+++ b/src/main/resources/message_ru.properties
@@ -213,5 +213,7 @@ message.viewcruise.buy=\u041A\u0443\u043F\u0438\u0442\u044C \u043A\u0440\u0443\u
 message.viewcruise.cruiseInfo=\u0418\u043D\u0444\u043E\u0440\u043C\u0430\u0446\u0438\u044F \u043E \u043A\u0440\u0443\u0438\u0437\u0435
 message.startpage.title=\u0413\u043B\u0430\u0432\u043D\u0430\u044F \u0441\u0442\u0440\u0430\u043D\u0438\u0446\u0430
 message.startpage.availcruises=\u0414\u043E\u0441\u0442\u0443\u043F\u043D\u044B\u0435 \u043A\u0440\u0443\u0438\u0437\u044B
+message.viewmycruises.history=\u041C\u043E\u0438 \u043F\u043E\u043A\u0443\u043F\u043A\u0438
+message.viewmycruises.title=\u041C\u043E\u0438 \u043F\u043E\u043A\u0443\u043F\u043A\u0438
 
 
