--- a/src/main/resources/message_ua.properties
+++ b/src/main/resources/message_ua.properties
@@ -213,5 +213,7 @@ message.viewcruise.buy=\u041A\u0443\u043F\u0438\u0442\u0438 \u043A\u0440\u0443\u
 message.viewcruise.cruiseInfo=\u0406\u043D\u0444\u043E\u0440\u043C\u0430\u0446\u0456\u044F \u043F\u0440\u043E \u043A\u0440\u0443\u0457\u0437
 message.startpage.title=\u0413\u043E\u043B\u043E\u0432\u043D\u0430 \u0441\u0442\u043E\u0440\u0456\u043D\u043A\u0430
 message.startpage.availcruises=\u0414\u043E\u0441\u0442\u0443\u043F\u043D\u0456 \u043A\u0440\u0443\u0457\u0437\u0438
+message.viewmycruises.history=\u041C\u043E\u0457 \u043F\u043E\u043A\u0443\u043F\u043A\u0438
+message.viewmycruises.title=\u041C\u043E\u0457 \u043F\u043E\u043A\u0443\u043F\u043A\u0438
 
 
