Changed StringStorage. Now I only create classes when they are needed. Added Presentation folder

--- a/src/main/resources/message_en.properties
+++ b/src/main/resources/message_en.properties
@@ -111,7 +111,7 @@ message.editaccount.btn=Edit account
 message.editaccount.eerupdate=Data not updated
 message.editaccount.errfillall=All fields are required
 message.editaccount.errorpass1and2=Passwords in field 1 and 2 do not match
-message.editaccount.uniq=Login and phone number must be unique!
+message.editaccount.uniq=Login must be unique!
 message.myaccount.editaccountbtn=Edit account
 message.myaccount.title=My account
 message.myaccount.managebonus=Manage bonuses
