--- a/src/main/resources/message_es.properties
+++ b/src/main/resources/message_es.properties
@@ -102,7 +102,7 @@ message.editaccount.btn=Editar cuenta
 message.editaccount.eerupdate=Datos no actualizados
 message.editaccount.errfillall=Todos los campos son obligatorios
 message.editaccount.errorpass1and2=Las contrase\u00F1as en los campos 1 y 2 no coinciden
-message.editaccount.uniq=\u00A1El inicio de sesi\u00F3n y el n\u00FAmero de tel\u00E9fono deben ser \u00FAnicos!
+message.editaccount.uniq=\u00A1El inicio de sesi\u00F3n debe ser \u00FAnico!
 message.myaccount.editaccountbtn=Editar cuenta
 message.myaccount.title=Mi cuenta
 message.myaccount.managebonus=Gesti\u00F3n de bonificaci\u00F3n
